# ai-voice-note

./: .gitignore  LICENSE  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.claude/: settings.json
.next/: build-manifest.json  trace
.next/cache/: .tsbuildinfo
.next/dev/: build-manifest.json  prerender-manifest.json  trace
.next/dev/cache/: .rscinfo
.next/dev/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @floating-ui+core@1.7.4.js  @floating-ui+dom@1.7.5.js  @floating-ui+react-dom@2.1.7_react-dom@18.3.1_react@18.3.1__react@18.3.1.js  @floating-ui+utils@0.2.10.js  @radix-ui+primitive@1.1.3.js  @radix-ui+react-compose-refs@1.1.2_@types+react@18.3.27_react@18.3.1.js  (+39 more)
app/: globals.css  layout.tsx  providers.tsx
components/: ActionPanel.tsx  AppShell.tsx  AudioPreview.tsx  DateTimeText.tsx  RecorderPanel.tsx  SessionView.tsx  SettingsDialog.tsx  SetupWizard.tsx  Sidebar.tsx
components/ui/: alert.tsx  badge.tsx  button.tsx  dialog.tsx  input.tsx  tabs.tsx  tooltip.tsx
lib/: audioRecorder.ts  export.ts  i18n.ts  icons.tsx  localApi.ts  mock.ts  processing.ts  store.tsx  utils.ts
lib/actions/: flowchartAction.ts  index.ts  mindmapAction.ts  registry.ts  types.ts  webhookAction.ts
locales/: de.json  en.json  fr.json  it.json
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: local_api.rs  main.rs  setup.rs
test/transkript/: kundeninterview.txt  projektplanung.txt  sprintplanung.txt
(+160 files in other folders)
